--- a/sinatra-app/Gemfile
+++ b/sinatra-app/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
 gem 'sinatra-activerecord'
-gem 'tiny_tds'
+gem 'tiny_tds', '~> 0.7.0'
 gem 'activerecord-sqlserver-adapter'
 gem 'rake'
